--- a/module4-solution/templates/categories.html
+++ b/module4-solution/templates/categories.html
@@ -1,5 +1,6 @@
+<a ui-sref="home">Home</a>
 <div class="container">
-    <h1>Categories List</h1>
+    <h3>Menu Categories List</h3>
 
     <categories data="catCtrl.categories"></categories>
 
